--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,27 @@
-/*
-COLORS:
-
+/* COLORS:
 Light green: #7ed56f
 Medium green: #55c57a
-Dark green: #28b485
+Dark green: #28b485 */
 
-*/
+/* Basic reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+body {
+    font-family: 'Lato', Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.7;
+    color: #777;
+}
+
+.header {
+    height: 95vh;
+    background-image: url(../img/BB_hero.jpg);
+    background-size: cover;
+    background-position: top;
+}
