--- a/css/style.css
+++ b/css/style.css
@@ -47,11 +47,14 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    
     text-align: center;
 }
 .heading-primary{
     color: #FFF;
     text-transform: uppercase;
+
+    margin-bottom: 10vh;
 }
 
 .heading-primary-main{
@@ -122,7 +125,7 @@ body {
 @keyframes fadeInUp {
     0% {
         opacity: 0; 
-        transform: translateY(+100%)  
+        transform: translateY(+500%)  
     }
     100% {
         opacity: 1;
@@ -140,6 +143,8 @@ body {
     border-radius: 100px;
     transition: all .2s;
     position: relative;
+    
+    font-size: 2vh;
 }
 
 .btn:hover {
@@ -158,7 +163,6 @@ body {
 
 .btn::after{
     content: '';
-    /* display: inline-block; */
     display: inherit;
     height: 100%;
     width: 100%;
@@ -181,6 +185,6 @@ body {
 
 .hero-btn{
     backface-visibility: hidden;
-    animation: fadeInUp 3s ease-out 2s;
+    animation: fadeInUp 3s ease 2s;
     animation-fill-mode: backwards;
 }
