--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,8 @@ body{
 ***********************************/
 
 html{
-    /* font-size: 62.5%; Default 10px */
-    font-size: 31.5%; /*Default 10px*/
+    font-size: 62.5%; /* Default 10px; */
+    /* font-size: 31.5%; */
 }
 
 /**********
