--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,3 +9,8 @@ $hero-transparency: 0.8;
 $color-grey-dark: #777;
 $color-white: #FFF;
 $color-black: #000;
+
+// Grid Layout
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
