--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
 @keyframes fadeInUp {
   0% {
     opacity: 0;
-    transform: translateY(50rem); }
+    transform: translateY(20rem); }
   100% {
     opacity: 1;
     transform: translate(0); } }
@@ -75,6 +75,43 @@ body {
       .heading-primary--main--3:hover {
         color: indigo; }
 
+.heading-secondary {
+  display: inline-block;
+  font-size: 4.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: linear-gradient(to bottom right, #FF0000, #55c57a);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  letter-spacing: 0.2rem;
+  transition: all .2s; }
+  .heading-secondary:hover {
+    transform: scale(1.02);
+    text-shadow: 1rem 2rem 2rem rgba(0, 0, 0, 0.2); }
+
+.heading-tertiary {
+  font-size: 1.7rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.paragraph {
+  font-size: 1.5rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
+
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-big {
+  margin-bottom: 8rem; }
+
+.u-margin-bottom-medium {
+  margin-bottom: 4rem; }
+
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem; }
+
 .btn:link, .btn:visited {
   display: inline-block;
   text-transform: uppercase;
@@ -119,9 +156,27 @@ body {
   animation: fadeInUp 3s ease 2s;
   animation-fill-mode: backwards; }
 
+.btn-text:link, .btn-text:visited {
+  font-size: 1.5rem;
+  color: #55c57a;
+  display: inline-block;
+  text-decoration: none;
+  padding: 1rem;
+  border-bottom: 1px solid #55c57a;
+  transition: all 0.1s; }
+
+.btn-text:hover {
+  background-color: #55c57a;
+  color: #FFF;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px); }
+
+.btn-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translateY(0); }
+
 .row {
   max-width: 114rem;
-  background-color: #ddd;
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
@@ -129,22 +184,30 @@ body {
     content: "";
     display: table;
     clear: both; }
+  .row [class^="col-"] {
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
   .row .col-1-of-2 {
-    width: calc((100% - 6rem) / 2);
-    background-color: orange;
-    float: left; }
-    .row .col-1-of-2:not(:last-child) {
-      margin-right: 6rem; }
+    width: calc( (100% - 6rem) / 2); }
   .row .col-1-of-3 {
-    width: calc((100% - (6rem*2) / 3));
-    background-color: orangered;
-    float: left; }
-    .row .col-1-of-3:not(:last-child) {
-      margin-right: 6rem; }
+    width: calc( (100% - 6rem*2) * (1/3) + (6rem * 0)); }
+  .row .col-2-of-3 {
+    width: calc( ((100% - 6rem*2) * (2/3)) + (6rem * 1)); }
+  .row .col-3-of-3 {
+    width: calc( ((100% - 6rem*2) * (3/3)) + (6rem * 2)); }
+  .row .col-1-of-4 {
+    width: calc( (100% - 6rem*3) * (1/4) + (6rem * 0)); }
+  .row .col-2-of-4 {
+    width: calc( ((100% - 6rem*3) * (2/4)) + (6rem * 1)); }
+  .row .col-3-of-4 {
+    width: calc( ((100% - 6rem*3) * (3/4)) + (6rem * 2)); }
+  .row .col-4-of-4 {
+    width: calc( ((100% - 6rem*3) * (4/4)) + (6rem * 3)); }
 
 .header {
   height: 98vh;
-  background-image: linear-gradient(to bottom right, rgba(255, 0, 0, 0.8), rgba(56, 180, 40, 0.8)), url(../img/BB_outdoors01.jpg);
+  background-image: linear-gradient(to bottom right, rgba(255, 0, 0, 0.8), rgba(85, 197, 122, 0.8)), url(../img/BB_outdoors01.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -162,3 +225,8 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; }
+
+.section-about {
+  background-color: #e9e5e5;
+  padding: 25rem 0;
+  margin-top: -5vh; }
