--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -14,7 +14,7 @@ body {
 
     &--main{
         display: block;
-        font-size: 6rem;
+        font-size: $font-size-heading-primary;
         font-weight: 400;
         letter-spacing: 3.5rem;
         text-align: center;
@@ -43,5 +43,37 @@ body {
                 color: indigo;
             }
         }
+    }
+}
+
+.heading-secondary{
+    display: inline-block;
+    font-size: $font-size-heading-secondary;
+    text-transform: uppercase;
+    font-weight: 700;
+    background-image: linear-gradient(to bottom right, $color-grad-topleft, $color-grad-bottomright);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    letter-spacing: 0.2rem;
+    transition: all .2s;
+
+    &:hover {
+        transform: scale(1.02);
+        text-shadow: 1rem 2rem 2rem rgba($color-black, 0.2);
+    }
+}
+
+.heading-tertiary{
+    font-size: $font-size-heading-tertiary;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.paragraph {
+    font-size: $font-size-default;
+
+    &:not(:last-child){
+        margin-bottom: 3rem;
     }
 }
