--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,7 +1,6 @@
 .row{
     //width: 1140px;  standard
     max-width: $grid-width;
-    background-color: #ddd;
     margin: 0 auto;
     
     &:not(:last-child) {
@@ -10,9 +9,7 @@
 
     @include clearfix;
 
-    .col-1-of-2 {
-        width: calc((100% - #{$gutter-horizontal}) / 2);
-        background-color:orange;
+    [class^="col-"] {
         float: left;
 
         &:not(:last-child) {
@@ -20,16 +17,57 @@
         }
     }
 
-    .col-1-of-3 {
+    .col-1-of-2 {
         width: calc(
-            (100% - (#{$gutter-horizontal}*2)) / 3
-            );
-        background-color: orangered;
-        float:left;
-
-        &:not(:last-child){
-            margin-right: $gutter-horizontal;
-        }
+            (100% - #{$gutter-horizontal}) / 2
+        );
     }
 
+    .col-1-of-3 {
+        width: calc(
+            (100% - #{$gutter-horizontal}*2) * (1/3)
+                + (#{$gutter-horizontal} * 0)
+        );
+    }
+
+    .col-2-of-3 {
+        width: calc(
+            ((100% - #{$gutter-horizontal}*2) * (2/3))
+                + (#{$gutter-horizontal} * 1)
+        );
+    }
+
+    .col-3-of-3 {
+        width: calc(
+            ((100% - #{$gutter-horizontal}*2) * (3/3))
+                + (#{$gutter-horizontal} * 2)
+        );
+    }
+
+    .col-1-of-4 {
+        width: calc(
+            (100% - #{$gutter-horizontal}*3) * (1/4)
+                + (#{$gutter-horizontal} * 0)
+        );
+    }
+
+    .col-2-of-4 {
+        width: calc(
+            ((100% - #{$gutter-horizontal}*3) * (2/4))
+                + (#{$gutter-horizontal} * 1)
+        );
+    }
+
+    .col-3-of-4 {
+        width: calc(
+            ((100% - #{$gutter-horizontal}*3) * (3/4))
+                + (#{$gutter-horizontal} * 2)
+        );
+    }
+    .col-4-of-4 {
+        width: calc(
+            ((100% - #{$gutter-horizontal}*3) * (4/4))
+                + (#{$gutter-horizontal} * 3)
+        );
+    }
 }
