--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 .header {
     height: 98vh;
-    background-image: linear-gradient(to bottom right, rgba($color-hero-topleft, $hero-transparency), rgba($color-hero-bottomright, $hero-transparency)), url(../img/BB_outdoors01.jpg);
+    background-image: linear-gradient(to bottom right, rgba($color-grad-topleft, $hero-transparency), rgba($color-grad-bottomright, $hero-transparency)), url(../img/BB_outdoors01.jpg);
     
     background-size: cover;
     background-repeat: no-repeat;
