--- a/css/style.css
+++ b/css/style.css
@@ -181,18 +181,26 @@ body {
     width: 60%;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
     border-radius: .5rem;
-    position: absolute; }
+    position: absolute;
+    z-index: 10;
+    transition: all .2s;
+    outline-offset: 1rem; }
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
     .composition__photo--p2 {
-      left: 25rem;
-      top: 5rem; }
+      right: 0;
+      top: 2rem; }
     .composition__photo--p3 {
-      left: 10rem;
-      top: 20rem; }
+      left: 20%;
+      top: 15rem; }
     .composition__photo:hover {
-      transform: scale(1.4); }
+      outline: 1rem solid #55c57a;
+      transform: scale(1.3) translateY(-0.5rem);
+      box-shadow: 5rem 5rem 8rem rgba(0, 0, 0, 0.5);
+      z-index: 20; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.95); }
 
 .row {
   max-width: 114rem;
