--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -6,6 +6,9 @@
         box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
         border-radius: .5rem;
         position: absolute;
+        z-index: 10;
+        transition: all .2s;
+        outline-offset: 1rem;
 
         &--p1{
             left: 0;
@@ -13,17 +16,25 @@
         }
 
         &--p2{
-            left: 25rem;
-            top: 5rem;
+            right: 0;
+            top: 2rem;
         }
 
         &--p3{
-            left: 10rem;
-            top: 20rem;
+            left: 20%;
+            top: 15rem;
         }
 
         &:hover {
-        transform: scale(1.4);
-        }
+            outline: 1rem solid $color-primary;
+            transform: scale(1.3) translateY(-.5rem);
+            box-shadow: 5rem 5rem 8rem rgba($color-black, .5);
+            z-index: 20;
+
+        }  
+    }
+
+    &:hover &__photo:not(:hover) {
+        transform: scale(0.95);
     }
 }
