--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ body {
   font-size: 4.5rem;
   text-transform: uppercase;
   font-weight: 700;
-  background-image: linear-gradient(to bottom right, #FF0000, #55c57a);
+  background-image: linear-gradient(to bottom right, #d41818, #0ba03d);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
@@ -158,15 +158,15 @@ body {
 
 .btn-text:link, .btn-text:visited {
   font-size: 1.5rem;
-  color: #55c57a;
+  color: #0ba03d;
   display: inline-block;
   text-decoration: none;
   padding: 1rem;
-  border-bottom: 1px solid #55c57a;
+  border-bottom: 1px solid #0ba03d;
   transition: all 0.1s; }
 
 .btn-text:hover {
-  background-color: #55c57a;
+  background-color: #0ba03d;
   color: #FFF;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
   transform: translateY(-2px); }
@@ -195,7 +195,7 @@ body {
       left: 20%;
       top: 15rem; }
     .composition__photo:hover {
-      outline: 1rem solid #55c57a;
+      outline: 1rem solid #0ba03d;
       transform: scale(1.3) translateY(-0.5rem);
       box-shadow: 5rem 5rem 8rem rgba(0, 0, 0, 0.5);
       z-index: 20; }
@@ -234,7 +234,7 @@ body {
 
 .header {
   height: 98vh;
-  background-image: linear-gradient(to bottom right, rgba(255, 0, 0, 0.8), rgba(85, 197, 122, 0.8)), url(../img/BB_outdoors01.jpg);
+  background-image: linear-gradient(to bottom right, rgba(212, 24, 24, 0.8), rgba(11, 160, 61, 0.8)), url(../img/BB_outdoors01.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -254,6 +254,6 @@ body {
     text-align: center; }
 
 .section-about {
-  background-color: #e9e5e5;
+  background-color: white;
   padding: 25rem 0;
   margin-top: -5vh; }
