--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,3 +3,8 @@
     padding: 25rem 0;
     margin-top: -5vh;
 }
+
+.section-features {
+    padding: 20rem 0;
+    background-image: linear-gradient(to bottom right, rgba($color-grad-topleft, $hero-transparency), rgba($color-grad-bottomright, $hero-transparency)), url(../img/BB_outdoors02.jpg);
+}
