--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,11 +1,13 @@
 .header {
     height: 98vh;
+    margin-bottom: $margin-section-floor;
     background-image: linear-gradient(to bottom right, rgba($color-grad-topleft, $hero-transparency), rgba($color-grad-bottomright, $hero-transparency)), url(../img/BB_outdoors01.jpg);
     
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     position: relative;
+    border-radius: $border-radius-large;
 
     &__logo-box {
         position: absolute;
