--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,10 +1,28 @@
 .section-about {
-    background-color: $color-grey-light-1;
-    padding: 25rem 0;
+    background-color: $color-background-sections;
     margin-top: -5vh;
+    margin-bottom: $margin-section-floor;
 }
 
 .section-features {
     padding: 20rem 0;
-    background-image: linear-gradient(to bottom right, rgba($color-grad-topleft, $hero-transparency), rgba($color-grad-bottomright, $hero-transparency)), url(../img/BB_outdoors02.jpg);
+    margin-bottom: $margin-section-floor;
+    background-size: cover;
+    background-position: top;
+    border-radius: $border-radius-large;
+    background-image: linear-gradient(
+            to bottom right,
+            rgba($color-grad-topleft, $hero-transparency),
+            rgba($color-grad-bottomright, $hero-transparency)
+        ),
+        url(../img/BB_outdoors02.jpg
+    );
+}
+
+.section-best {
+    margin-bottom: $margin-section-floor;
+    background-color: $color-background-sections;
+    //background-image: linear-gradient(to bottom right, rgba($color-grad-topleft, $hero-transparency), rgba($color-grad-bottomright, $hero-transparency));
+    border-radius: $border-radius-large;
+    height: 80rem;
 }
