--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,12 @@ body {
 .u-margin-bottom-small {
   margin-bottom: 1.5rem; }
 
+.u-margin-top-big {
+  margin-top: 8rem; }
+
+.u-margin-top-huge {
+  margin-top: 10rem; }
+
 .btn:link, .btn:visited {
   display: inline-block;
   text-transform: uppercase;
@@ -156,6 +162,12 @@ body {
   color: #777; }
   .btn--white::after {
     background-color: #FFF; }
+
+.btn--primary {
+  background-color: #0ba03d;
+  color: #FFF; }
+  .btn--primary::after {
+    background-color: #0ba03d; }
 
 .btn--animated {
   backface-visibility: hidden;
@@ -219,7 +231,9 @@ body {
     background-position: top;
     background-blend-mode: color;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%); }
+    clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
+    border-top-left-radius: 2.5rem;
+    border-top-right-radius: 2.5rem; }
     .card__picture--1 {
       background-image: linear-gradient(to top left, white, #ff8080), url(../img/card-cubs.jpg); }
     .card__picture--2 {
@@ -245,6 +259,36 @@ body {
       background-image: linear-gradient(to right bottom, rgba(57, 241, 119, 0.75), rgba(11, 160, 61, 0.85)); }
     .card__heading-span--3 {
       background-image: linear-gradient(to right bottom, rgba(148, 3, 255, 0.75), rgba(75, 0, 130, 0.85)); }
+  .card__details {
+    padding: 3rem;
+    width: 80%;
+    margin: 0 auto; }
+    .card__details ul {
+      margin: 0 auto;
+      list-style: none;
+      width: 80%; }
+      .card__details ul li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem; }
+        .card__details ul li:not(:last-child) {
+          border-bottom: 1px solid #e7e7e7; }
+  .card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center; }
+  .card__price-box {
+    text-align: center;
+    color: #FFF; }
+  .card__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase; }
+  .card__price-value {
+    font-size: 8rem;
+    font-weight: 200; }
 
 .composition {
   position: relative; }
@@ -325,7 +369,7 @@ body {
 
 .header {
   height: 98vh;
-  margin-bottom: 20rem;
+  margin-bottom: 15rem;
   background-image: linear-gradient(to bottom right, rgba(255, 0, 0, 0.6), rgba(11, 160, 61, 0.6)), url(../img/BB_outdoors01.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -347,20 +391,21 @@ body {
     text-align: center; }
 
 .section-about {
+  padding: 5rem 0 15rem 0;
   background-color: #e6f6e4;
-  margin-top: -5vh;
-  margin-bottom: 20rem; }
+  margin-bottom: 15rem;
+  border-radius: 3.5rem; }
 
 .section-features {
-  padding: 20rem 0;
-  margin-bottom: 20rem;
+  padding: 8rem 0 8rem 0;
+  margin-bottom: 15rem;
   background-size: cover;
   background-position: top;
   border-radius: 3.5rem;
   background-image: linear-gradient(to bottom right, rgba(255, 0, 0, 0.6), rgba(11, 160, 61, 0.6)), url(../img/BB_outdoors02.jpg); }
 
 .section-best {
-  margin-bottom: 20rem;
+  padding: 5rem 0 7rem 0;
+  margin-bottom: 15rem;
   background-color: #e6f6e4;
-  border-radius: 3.5rem;
-  height: 80rem; }
+  border-radius: 3.5rem; }
