--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -78,7 +78,7 @@ body {
     }
 }
 
-.rainbow {
+.rainbow-text {
     background-image: linear-gradient(to right, $rainbow);
     -webkit-background-clip: text;
     background-clip: text;
