--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ body {
   .paragraph:not(:last-child) {
     margin-bottom: 3rem; }
 
-.rainbow {
+.rainbow-text {
   background-image: linear-gradient(to right, red, orange, #c9c904, green, blue, indigo, violet);
   -webkit-background-clip: text;
   background-clip: text;
@@ -180,6 +180,7 @@ body {
   display: inline-block;
   text-decoration: none;
   padding: 1rem;
+  border-radius: 0;
   border-bottom: 1px solid #0ba03d;
   transition: all 0.1s; }
 
@@ -337,6 +338,52 @@ body {
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.1); }
 
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.2);
+  background-color: #FFF;
+  border-radius: 1.5rem;
+  padding: 6rem;
+  padding-left: 9rem;
+  font-size: 1.5rem;
+  transform: skewX(-12deg);
+  height: 27rem; }
+  .story__shape {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skewX(12deg);
+    position: relative; }
+  .story__img {
+    height: 100%;
+    transform: scale(1);
+    transition: all 2s; }
+  .story__text {
+    transform: skewX(12deg); }
+  .story__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    color: #FFF;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.5s;
+    backface-visibility: hidden; }
+  .story:hover .story__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%); }
+  .story:hover .story__img {
+    transform: scale(2);
+    filter: blur(2px) brightness(80%); }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
@@ -406,6 +453,12 @@ body {
 
 .section-best {
   padding: 5rem 0 7rem 0;
+  margin-bottom: 15rem;
+  background-color: #e6f6e4;
+  border-radius: 3.5rem; }
+
+.section-stories {
+  padding: 5rem 0;
   margin-bottom: 15rem;
   background-color: #e6f6e4;
   border-radius: 3.5rem; }
