--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -74,6 +74,7 @@
         display: inline-block;
         text-decoration: none;
         padding: 1rem;
+        border-radius: 0;
         border-bottom: 1px solid $color-primary;
         transition: all 0.1s;
     }
