--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,20 @@ body {
 .u-margin-top-huge {
   margin-top: 10rem; }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.35;
+  overflow: hidden; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
+
 .btn:link, .btn:visited {
   display: inline-block;
   text-transform: uppercase;
@@ -342,7 +356,7 @@ body {
   width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.2);
-  background-color: #FFF;
+  background-color: rgba(255, 255, 255, 0.8);
   border-radius: 1.5rem;
   padding: 6rem;
   padding-left: 9rem;
@@ -460,5 +474,5 @@ body {
 .section-stories {
   padding: 5rem 0;
   margin-bottom: 15rem;
-  background-color: #e6f6e4;
-  border-radius: 3.5rem; }
+  border-radius: 3.5rem;
+  position: relative; }
