--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,7 @@ body {
   width: 100%;
   z-index: -1;
   opacity: 0.35;
+  border-radius: 3.5rem;
   overflow: hidden; }
   .bg-video__content {
     height: 100%;
