--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,22 @@ body {
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.1); }
 
+.form__group:not(:last-child) {
+  margin-bottom: 2rem; }
+
+.form__input {
+  font-size: 1.5rem;
+  font-family: inherit;
+  padding: 1.5rem 2rem;
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border: none; }
+
+.form__input:focus {
+  outline: none;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.8);
+  border-bottom: #0ba03d; }
+
 .story {
   width: 75%;
   margin: 0 auto;
@@ -477,3 +493,18 @@ body {
   margin-bottom: 15rem;
   border-radius: 3.5rem;
   position: relative; }
+
+.section-book {
+  padding: 5rem 0 15rem 0;
+  background-image: linear-gradient(to bottom right, rgba(255, 0, 0, 0.6), rgba(11, 160, 61, 0.6));
+  margin-bottom: 15rem;
+  border-radius: 3.5rem; }
+
+.book {
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9), 55%, transparent 60%), url(../img/card-mama.jpg);
+  background-size: 100%;
+  border-radius: 1.5rem;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2); }
+  .book__form {
+    width: 50%;
+    padding: 6rem; }
