--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -36,3 +36,34 @@
     position: relative; //for video background.
 
 }
+
+.section-book {
+    padding: 5rem 0 15rem 0;
+    background-image: linear-gradient(
+        to bottom right,
+        rgba($color-grad-topleft, $hero-transparency),
+        rgba($color-grad-bottomright, $hero-transparency)
+    );
+    margin-bottom: $margin-section-floor;
+    border-radius: $border-radius-large;
+}
+
+.book {
+    background-image: linear-gradient(
+        105deg,
+        rgba($color-white, .9) 0%,
+        rgba($color-white, .9), 55%,
+        transparent 60%)
+        , url(../img/card-mama.jpg);
+    background-size: 100%;
+    border-radius: $border-radius-small;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
+    
+    // width: 80%;
+    // height: 50rem;
+
+    &__form {
+        width: 50%;
+        padding: 6rem;
+    }
+}
